--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
@@ -64,6 +70,42 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-codegen-maven-plugin</artifactId>
+				<version>2.4.12</version>
+				<executions>
+					<execution>
+						<id>generate-java-api-v1</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/api/provider/demo-api.yaml</inputSpec>
+							<modelPackage>org.kizombadev.spring.demo.controller.model</modelPackage>
+							<apiPackage>org.kizombadev.spring.demo.controller</apiPackage>
+<!--							<verbose>false</verbose>-->
+<!--							<configHelp>false</configHelp>-->
+							<language>spring</language>
+<!--							<generateApiDocumentation>false</generateApiDocumentation>-->
+<!--							<generateApis>true</generateApis>-->
+<!--							<generateModels>true</generateModels>-->
+<!--							<generateSupportingFiles>false</generateSupportingFiles>-->
+							<languageSpecificPrimitives>true</languageSpecificPrimitives>
+							<configOptions>
+								<useBeanValidation>true</useBeanValidation>
+								<java8>true</java8>
+<!--								<async>false</async>-->
+								<interfaceOnly>true</interfaceOnly>
+<!--								<dateLibrary>java8</dateLibrary>-->
+<!--								<delegatePattern>false</delegatePattern>-->
+<!--								<useTags>true</useTags>-->
+							</configOptions>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
