--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,20 @@
+
+demo:
+  url-get: https://httpbin.org/get
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  jpa.database-platform: org.hibernate.dialect.H2Dialect
+  jpa:
+    hibernate:
+      ddl-auto: validate
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.xml
+
 management:
   endpoints:
     web:
@@ -6,6 +23,3 @@ management:
   endpoint:
     health:
       show-details: always
-demo:
-  url-get: https://httpbin.org/get
-  url-post: https://httpbin.org/post
