--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
     url: jdbc:h2:file:E:\coding\spring-learning\demo\.h2\db
     driverClassName: org.h2.Driver
     username: sa
-    password:
+    password: password
   jpa.database-platform: org.hibernate.dialect.H2Dialect
   jpa:
     hibernate:
